# img-proc-basic

using-dlib/build-img-dlib-Desktop_Qt_5_15_2_MSVC2015_64bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
using-dlib/build-img-dlib-Desktop_Qt_5_15_2_MSVC2015_64bit-Release/.cmake/api/v1/reply/: cache-v2-5def001c153b8e34e5d7.json  cmakeFiles-v1-434a003a77236d718be2.json  codemodel-v2-1508ea1f6b8da48cedb2.json  index-2021-09-25T10-14-31-0658.json  target-img-dlib-Release-e71ddee637df1dd7f12b.json
using-dlib/img-dlib/: CMakeLists.txt  main.cpp
using-opencv/build-img-opencv-Desktop_Qt_5_15_2_MSVC2015_64bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
using-opencv/build-img-opencv-Desktop_Qt_5_15_2_MSVC2015_64bit-Release/.cmake/api/v1/reply/: cmakeFiles-v1-031cfbfc310a333d5219.json  codemodel-v2-1dfdc6cb84c69d567602.json  index-2021-09-25T08-33-24-0385.json  target-img-opencv-Release-3cd9cf1dabe7401ff5e2.json
using-opencv/build-img-opencv-Desktop_Qt_5_15_2_MSVC2015_64bit-Release/.cmake/api/v1/reply.prev/: cache-v2-35e59aa3f268741fa55a.json  codemodel-v2-1c62fccdbd95719cf46d.json  index-2021-09-25T08-33-15-0400.json  target-img-opencv-Release-1610e94c7d79422901d3.json
using-opencv/img-opencv/: CMakeLists.txt  main.cpp
